fix m/r handling of undefined SERVER-2861